test/parser/should_fail/expr3.souc.bad
import Import

main() = do
	print @uhcruelue@
end main
